avoid overlap and overflow for months

--- a/components/CommitCalendar.module.scss
+++ b/components/CommitCalendar.module.scss
@@ -23,18 +23,17 @@
 }
 
 .week {
+	grid-row: 3;
 	grid-column: 1/2;
-	grid-row-start: 3;
-	align-content: end;
 	line-height: 10px;
 	margin-right: 3px;
 
 	& + .week {
-		grid-row-start: 5;
+		grid-row: 5;
 	}
 
 	& + .week + .week {
-		grid-row-start: 7;
+		grid-row: 7;
 	}
 }
 
